--- a/assignments/website/styles/styles.css
+++ b/assignments/website/styles/styles.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&display=swap');
 
+body{
+    font-family: 'Poppins', sans-serif;
+    color: black;
+}
 
 #container{
     width: 900px;
@@ -6,12 +11,13 @@
     margin: auto;
 }
 
-body{
-    font-family: 'Palette Mosaic', cursive;  
-}
 
 header{
+    overflow: auto;
     border: 10px solid green;
+    border-bottom-left-radius:20px;
+    border-bottom-right-radius:20px;
+    
 }
 
 header h1 {
@@ -20,7 +26,7 @@ header h1 {
 }
 
 nav ul{
-    border: 1px solid black;
+    border: 1px solid green;
     text-align: right;
 }
 
@@ -28,19 +34,27 @@ nav ul li {
     display: inline-block;
     margin-right: 20px;
     font-size: 24px;
+    color: black;
 }
 
 nav ul li a{
-    color:purple;
-}
-
-nav ul li a :hover{
     text-decoration: none;
-}
 
-nav ul li link :hover {
+}
+nav ul li a:link {
     color: orange; 
 }
+nav ul li a:visited{
+    color: black;
+}
+nav ul li a:hover{
+    color:orange;
+}
+nav ul li a:active {
+color:greenyellow;
+}
+
+
 
 main{
     border: 10px solid yellow;
